-
Bug
-
Resolution: Fixed
-
P2
-
9
-
Windows 7, 10, forced English locale
-
b127
-
windows
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8183782 | 8u161 | Dmitry Markov | P2 | Resolved | Fixed | b01 |
| JDK-8169254 | 8u152 | Dmitry Markov | P2 | Closed | Fixed | b01 |
| JDK-8192523 | emb-8u161 | Dmitry Markov | P2 | Resolved | Fixed | b01 |
The test is java/awt/event/KeyEvent/KeyChar/KeyCharTest.java.
First, in this PIT build there is a new quite unexpected exception running Windows (7 and 10) (plus a dump of some EncodeD):
java.lang.IllegalArgumentException: invalid keyChar
at java.awt.event.KeyEvent.<init>(java.desktop@9-ea/KeyEvent.java:1172)
at sun.awt.windows.WToolkit.eventLoop(java.desktop@9-ea/Native Method)
at sun.awt.windows.WToolkit.run(java.desktop@9-ea/WToolkit.java:314)
at java.lang.Thread.run(java.base@9-ea/Thread.java:843)
It is new in this PIT: b124 doesn't throw this.
Second, a test bug:
This test depends on a char returned by getKeyChar() from KEY_PRESSED and KEY_RELEASED. However that char is not necessary defined. According to the spec, "KEY_PRESSED and KEY_RELEASED events are not intended for reporting of character input." -- it's only KEY_TYPED event must report a valid keychar.
As a result, the test fails on Windows with "Key char is not delete" and indeed, it is 0xFFFF (CHAR_UNDEFINED) which is expected.
First, in this PIT build there is a new quite unexpected exception running Windows (7 and 10) (plus a dump of some EncodeD):
java.lang.IllegalArgumentException: invalid keyChar
at java.awt.event.KeyEvent.<init>(java.desktop@9-ea/KeyEvent.java:1172)
at sun.awt.windows.WToolkit.eventLoop(java.desktop@9-ea/Native Method)
at sun.awt.windows.WToolkit.run(java.desktop@9-ea/WToolkit.java:314)
at java.lang.Thread.run(java.base@9-ea/Thread.java:843)
It is new in this PIT: b124 doesn't throw this.
Second, a test bug:
This test depends on a char returned by getKeyChar() from KEY_PRESSED and KEY_RELEASED. However that char is not necessary defined. According to the spec, "KEY_PRESSED and KEY_RELEASED events are not intended for reporting of character input." -- it's only KEY_TYPED event must report a valid keychar.
As a result, the test fails on Windows with "Key char is not delete" and indeed, it is 0xFFFF (CHAR_UNDEFINED) which is expected.
- backported by
-
JDK-8183782 [PIT] Exception running java/awt/event/KeyEvent/KeyChar/KeyCharTest.java
-
- Resolved
-
-
JDK-8192523 [PIT] Exception running java/awt/event/KeyEvent/KeyChar/KeyCharTest.java
-
- Resolved
-
-
JDK-8169254 [PIT] Exception running java/awt/event/KeyEvent/KeyChar/KeyCharTest.java
-
- Closed
-
- relates to
-
JDK-8139189 VK_OEM_102 dead key detected as VK_UNDEFINED
-
- Resolved
-