8160623: [PIT] Exception running java/awt/event/KeyEvent/KeyChar/KeyCharTest.java

Reviewed-by: yan, prr